force-app/main/default/objects/Contact/fields/AcctSeed__X1099_Vendor__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__X1099_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marks vendor to report cash disbursements on 1099-Misc form.</inlineHelpText>
    <label>1099 Vendor</label>
    <type>Checkbox</type>
</CustomField>