force-app/main/default/objects/Contact/fields/Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Anniversary__c</fullName>
    <description>This is a couples anniversary date</description>
    <inlineHelpText>Anniversary Date if it is a couple</inlineHelpText>
    <label>Anniversary</label>
    <type>Date</type>
</CustomField>