force-app/main/default/objects/Contact/fields/Current_NPS_Rating__c.field-meta.xml
<CustomField>
    <fullName>Current_NPS_Rating__c</fullName>
    <formula>IF( NPS__c &gt;8, 1,  IF( NPS__c &lt;7, -1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current NPS Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>