force-app/main/default/objects/Contact/fields/Current_NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>Current_NPS_Score__c</fullName>
    <label>Current NPS Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>