force-app/main/default/objects/Contact/fields/Current_NPS_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_NPS_Status__c</fullName>
    <formula>IF (ISBLANK(NPS__c), &quot;&quot;,
 IF( NPS__c &gt;8, &quot;Promoter&quot;, 
  IF( NPS__c &lt;7, &quot;Detractor&quot;, &quot;Neutral&quot;)
 )
)</formula>
    <label>Current NPS Status</label>
    <type>Text</type>
</CustomField>