force-app/main/default/objects/Contact/fields/Do_Not_Send_Survey__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Send_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Customer will not receive any surveys if checked.</inlineHelpText>
    <label>Do Not Send Survey</label>
    <type>Checkbox</type>
</CustomField>