force-app/main/default/objects/Contact/fields/Drivers_License__c.field-meta.xml
<CustomField>
    <fullName>Drivers_License__c</fullName>
    <label>Drivers License</label>
    <length>100</length>
    <type>Text</type>
</CustomField>