force-app/main/default/objects/Contact/fields/IsPersonAccount__c.field-meta.xml
<CustomField>
    <fullName>IsPersonAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPersonAccount</label>
    <type>Checkbox</type>
</CustomField>