force-app/main/default/objects/Contact/fields/Lead_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates which Dealer Account Contact is used to receiving Marketing Cloud emails.</inlineHelpText>
    <label>Lead Contact</label>
    <type>Checkbox</type>
</CustomField>