force-app/main/default/objects/Contact/fields/New_Opp__c.field-meta.xml
<CustomField>
    <fullName>New_Opp__c</fullName>
    <description>HYPERLINK(&quot;/setup/ui/recordtypeselect.jsp?ent=Opportunity&amp;retURL=&quot; + Id + &quot;&amp;save_new_url=&quot; + &quot;%2F006%2Fe%3Flookupcmpgn%3D1%26retURL%3D%252F&quot; +  Id + &quot;%26accid=&quot; +  AccountId + &quot;&amp;conid=&quot; + Id + &quot;&amp;opp3=&quot; +  FirstName + &quot; -Donation &quot; + Text(Today()) + &quot;&amp;CF00NU0000003iNhs=&quot; + FirstName +  LastName  + &quot;&amp;CF00NU0000003iNhs_lkid=&quot; + Id , IMAGE(&quot;/resource/QuickActions/Money.png&quot;,&quot;New Opp&quot;) , &quot;_parent&quot;)</description>
    <formula>HYPERLINK (&quot;/006/e?lookupcmpgn=1&amp;retURL=%2F&quot; + Id + &quot;&amp;accid=&quot; + AccountId + &quot;&amp;conid=&quot; + Id , IMAGE(&quot;/resource/trac_QuickActions/Money.png&quot;,&quot;New Opp&quot;) , &quot;_parent&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Opportunity</label>
    <type>Text</type>
</CustomField>