force-app/main/default/objects/Contact/fields/Receives_Monthly_Statements__c.field-meta.xml
<CustomField>
    <fullName>Receives_Monthly_Statements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receives Monthly Statements</label>
    <type>Checkbox</type>
</CustomField>