force-app/main/default/objects/Contact/fields/Tax_Exempt_Status_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt_Status_Card_Number__c</fullName>
    <label>Tax Exempt Status Card Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>