force-app/main/default/objects/Contact/fields/trac_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>trac_LinkedIn__c</fullName>
    <formula>HYPERLINK(&quot;http://www.linkedin.com/pub/dir/&quot;+ FirstName+&quot;/&quot;+LastName , IMAGE(&quot;/resource/trac_LinkedIn&quot;, &quot;LinkedIN&quot;) , &quot;_new&quot;)</formula>
    <label>LinkedIn</label>
    <type>Text</type>
</CustomField>