force-app/main/default/objects/Contact/fields/trac_LVM__c.field-meta.xml
<CustomField>
    <fullName>trac_LVM__c</fullName>
    <formula>HYPERLINK(&quot;/00T/e?who_id=&quot; + Id + &quot;&amp;what_id=&quot; + AccountId + &quot;&amp;retURL=/&quot; + Id + &quot;&amp;tsk5=Left Message with &quot; + FirstName + &quot; &quot; + LastName + &quot;&amp;tsk4=&quot; + TEXT(DAY(TODAY())) + &quot;/&quot; + TEXT(MONTH(TODAY())) + &quot;/&quot; + TEXT(YEAR(TODAY())) + &quot;&amp;tsk12=Completed&quot;, IMAGE(&quot;/resource/trac_QuickActions/Mail.png&quot;, &quot;LVM&quot;) , &quot;_parent&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LVM</label>
    <type>Text</type>
</CustomField>