force-app/main/default/objects/Contact/fields/trac_Quick_Actions__c.field-meta.xml
<CustomField>
    <fullName>trac_Quick_Actions__c</fullName>
    <formula>trac_Log_Call__c &amp; &#39;  &#39; &amp; trac_LVM__c &amp; &#39;  &#39; &amp;  trac_Set_Meeting__c &amp; &#39; &#39; &amp;  trac_Set_Task__c &amp; &#39; &#39; &amp;  New_Opp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Green - Log a call 
Blue - Left a message 
Red - Set a new meeting 
Purple - Create a new task
Orange - Create new Opportunity</inlineHelpText>
    <label>Quick Actions</label>
    <type>Text</type>
</CustomField>