force-app/main/default/objects/Contact/fields/trac_Set_Meeting__c.field-meta.xml
<CustomField>
    <fullName>trac_Set_Meeting__c</fullName>
    <formula>HYPERLINK(&quot;/00U/e?who_id=&quot; + Id + &quot;&amp;what_id=&quot; + AccountId  + &quot;&amp;retURL=/&quot; + Id + &quot;&amp;evt5=Meeting Booked with &quot; + FirstName + &quot; &quot; + LastName + &quot;&amp;evt4=&quot; + TEXT(DAY(TODAY())) + &quot;/&quot; + TEXT(MONTH(TODAY())) + &quot;/&quot; + TEXT(YEAR(TODAY())) , IMAGE(&quot;/resource/trac_QuickActions/Calendar.png&quot;, &quot;Meeting&quot;) , &quot;_parent&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Set Meeting</label>
    <type>Text</type>
</CustomField>