force-app/main/default/objects/Contact/fields/trac_Set_Task__c.field-meta.xml
<CustomField>
    <fullName>trac_Set_Task__c</fullName>
    <formula>HYPERLINK(&quot;/00T/e?&amp;who_id=&quot; + Id + &quot;&amp;what_id=&quot; + AccountId + &quot;&amp;retURL=/&quot; + Id, IMAGE(&quot;/resource/trac_QuickActions/Notes.png&quot;,&quot;Task&quot;) , &quot;_parent&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Set Task</label>
    <type>Text</type>
</CustomField>