force-app/main/default/objects/Contact/fields/WOW_Notes__c.field-meta.xml
<CustomField>
    <fullName>WOW_Notes__c</fullName>
    <description>Area to capture details that could help us WOW! the customer</description>
    <label>WOW! Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>