force-app/main/default/objects/Contact/listViews/Western_Dealers.listView-meta.xml
<ListView>
    <fullName>Western_Dealers</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.ADDRESS2_STATE_CODE</field>
        <operation>equals</operation>
        <value>AB,BC,MB,SK,ON</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Maltais</value>
    </filters>
    <label>Western Dealers</label>
    <language>en_US</language>
</ListView>